--- a/test_main.html
+++ b/test_main.html
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="weather-time">
-                        <div class="third-row"><br><br><br>SLC UT: 67 degrees  <br> <br><br> Inside Temperature: 73 degrees</div>
+                        <div class="third-row"></div>
                     </div>
 
                 </div>
